--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.loopj.android:android-async-http:1.4.6'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation files('libs/javabase64-1.3.1.jar')
     implementation 'com.jakewharton:butterknife:8.8.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
     implementation 'com.alibaba:fastjson:1.2.10'
     implementation 'com.squareup.okhttp:okhttp:2.4.0'
+    implementation 'com.google.code.gson:gson:2.3'
+    implementation 'httpcomponents-httpcore:httpcore:4.0-alpha6'
 }
