--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
-def SERVICE_URL_DEBUG = "\"http://120.27.5.36:8080/QrcodeTrackerWeb/\""  //远程电脑ip
-def SERVICE_URL_PRERELEASE = "\"http://120.27.5.36:8080/QrcodeTrackerWeb/\""  //远程电脑ip
-def SERVICE_URL_RELEASE = "\"http://120.27.5.36:8080/QrcodeTrackerWeb/\""  //远程电脑ip
+def SERVICE_URL_DEBUG = "\"http://120.27.5.36:8080/htk_merchant/\""  //远程电脑ip
+def SERVICE_URL_PRERELEASE = "\"http://120.27.5.36:8080/htk_merchant/\""  //远程电脑ip
+def SERVICE_URL_RELEASE = "\"http://120.27.5.36:8080/htk_merchant/\""  //远程电脑ip
 
-//def SERVICE_URL_DEBUG = "\"http://192.168.1.110:8080/qrcodetracker/\""  //马鹏昊电脑ip
-//def SERVICE_URL_PRERELEASE = "\"http://192.168.1.110:8080/qrcodetracker/\""  //马鹏昊电脑ip
-//def SERVICE_URL_RELEASE = "\"http://192.168.1.110:8080/qrcodetracker/\""  //马鹏昊电脑ip
+//def SERVICE_URL_DEBUG = "\"http://192.168.1.110:8080/htk_merchant/\""  //马鹏昊电脑ip
+//def SERVICE_URL_PRERELEASE = "\"http://192.168.1.110:8080/htk_merchant/\""  //马鹏昊电脑ip
+//def SERVICE_URL_RELEASE = "\"http://192.168.1.110:8080/htk_merchant/\""  //马鹏昊电脑ip
 
-def RESOURCE_URL_DEBUG = "\"http://192.168.0.6:8080/qrcodetracker/upload\""
+def RESOURCE_URL_DEBUG = "\"http://192.168.0.6:8080/htk_merchant/upload\""
 def RESOURCE_URL_PRERELEASE = "\"http://dev.cloudcns.com/lottery-resource/upload\""
 def RESOURCE_URL_RELEASE = "\"http://dev.cloudcns.com/lottery-resource/upload\""
-def APP_NAME = "骑手"
+def APP_NAME = "商家接单"
 def APP_ID = "101100"
 def VERSION_CODE = 2
 def VERSION_NAME = "1.0.1"
@@ -66,4 +66,6 @@ dependencies {
     implementation 'com.squareup.okhttp:okhttp:2.4.0'
     implementation 'com.google.code.gson:gson:2.3'
     implementation 'httpcomponents-httpcore:httpcore:4.0-alpha6'
+    implementation 'com.facebook.fresco:fresco:0.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
 }
