--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     implementation 'httpcomponents-httpcore:httpcore:4.0-alpha6'
     implementation 'com.facebook.fresco:fresco:0.12.0'
     implementation 'com.github.bumptech.glide:glide:4.0.0'
+    implementation files('libs/BaiduLBS_Android.jar')
+    implementation files('libs/bcprov-jdk-1.3.9.jar')
+    implementation files('libs/locSDK_6.13.jar')
 }
