--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
             -->
         </activity>
         <activity android:name=".activities.LoginActivity">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,6 +68,15 @@
             -->
         </activity>
         <activity android:name=".activities.LaunchActivity">
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity android:name=".activities.MapTestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
