--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,11 +68,13 @@
             -->
         </activity>
         <activity android:name=".activities.LaunchActivity">
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
         <activity android:name=".activities.MapTestActivity">
 
@@ -85,7 +87,14 @@
             -->
         </activity>
         <activity android:name=".activities.ProductListActivity" />
-        <activity android:name=".activities.EditProductActivity"></activity>
+        <activity android:name=".activities.EditProductActivity" />
+        <activity android:name=".activities.UploadPhoneActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
