--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     implementation files('libs/BaiduLBS_Android.jar')
     implementation files('libs/bcprov-jdk-1.3.9.jar')
     implementation files('libs/locSDK_6.13.jar')
+    implementation files('libs/commons-net-3.6-sources.jar')
+    implementation files('libs/commons-net-3.6.jar')
+    implementation files('libs/commons-net-examples-3.6.jar')
 }
