--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,21 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            //选择要添加的对应cpu类型的.so库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86'
+            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+        }
+        manifestPlaceholders = [
+                JPUSH_PKGNAME: applicationId,
+                JPUSH_APPKEY : "a9ebbacf10b5ef258ea9d824", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
+        ]
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }
     }
     buildTypes {
         debug {
@@ -35,7 +50,9 @@ android {
             buildConfigField "boolean", "API_DEBUG", "true"
             buildConfigField "String", "SERVICE_URL", SERVICE_URL_DEBUG
             buildConfigField "String", "RESOURCE_URL", RESOURCE_URL_DEBUG
-            manifestPlaceholders = [APP_LABEL: APP_NAME + "开发"]
+            manifestPlaceholders = [
+                    APP_LABEL: APP_NAME + "开发"
+            ]
 //            signingConfig  signingConfigs.key
         }
         release {
@@ -74,4 +91,7 @@ dependencies {
     implementation files('libs/commons-net-3.6-sources.jar')
     implementation files('libs/commons-net-3.6.jar')
     implementation files('libs/commons-net-examples-3.6.jar')
+    implementation files('libs/jcore-android-1.2.7.jar')
+    implementation files('libs/jpush-android-3.2.0.jar')
+    implementation 'org.greenrobot:eventbus:3.0.0'
 }
