--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
             android:authorities="com.hualing.htk_merchant.DataProvider"
             android:name="cn.jpush.android.service.DataProvider"
             android:exported="true"
+            android:grantUriPermissions="true"
             />
 
         <!-- since 1.8.0 option 可选项。用于同一设备中不同应用的JPush服务相互拉起的功能。 -->
